# Vinted

./: .gitignore  README.md  VPS-VERIFICATION.md  debug_vps_cookies.py  dump_item.py  install_services.sh  item.json  pyproject.toml  python3.cmd  test_api.py  test_client.py  test_impersonates.py  test_out.txt  test_output.txt  test_parser.py
.gsd/: DECISIONS.md  DISCUSSION-MANIFEST.json  KNOWLEDGE.md  OVERRIDES.md  PREFERENCES.md  PROJECT.md  REQUIREMENTS.md  STATE.md  doctor-history.jsonl  event-log.jsonl  preferences.md  state-manifest.json
amélioration/: diagnostic_db_lock_2026-03-22.md  migration_api_json.md  migration_http_vinted.md  refactoring_async.md  remise_en_route_propre_2026-03-22.md  resume_changements.md  review_approfondie_2026-03-22.md  systemd_et_optimisations_sqlite.md
infra/: docker-compose.data-platform.yml
scripts/: benchmark_price_filter.py  recover_partial_db.py  run_vps_benchmark.py  run_vps_verification.sh  sync_db_safe.py  verify_clickhouse_routes.py  verify_cutover_stack.py  verify_vps_serving.py  vpsctl.sh
tests/: clickhouse_product_test_support.py  conftest.py  platform_test_fakes.py  test_acquisition_benchmark.py  test_acquisition_benchmark_cli.py  test_api_catalog_page.py  test_card_payload.py  test_catalog_tree.py  test_cli_discover_smoke.py  test_cli_smoke.py  test_clickhouse_ingest.py  test_clickhouse_parity.py  test_clickhouse_queries.py  test_clickhouse_schema.py  test_cutover_smoke.py  test_dashboard.py  test_dashboard_cli.py  test_data_platform_bootstrap.py  test_data_platform_smoke.py  test_db_health_cli.py  test_http.py  (+38 more)
(+389 files in other folders)
