[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vinted-radar"
version = "0.1.0"
description = "Local-first Vinted market radar"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.12",
  "boto3>=1.37",
  "clickhouse-connect>=0.8",
  "curl_cffi>=0.7",
  "psycopg[binary]>=3.2",
  "pyarrow>=19.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
]

[project.scripts]
vinted-radar = "vinted_radar.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["vinted_radar*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
